# phenix

./: Cargo.toml  README.md
bundles/: test.pk
phenix_core/: Cargo.toml
phenix_core/src/: bash.rs  creation.rs  evaluate.rs  lib.rs  names.rs  pack.rs  runtime.rs  value.rs
phenix_core/src/creation/: complex.rs
phenix_core/src/error/: eval.rs  evaluate.rs  expression.rs  extract_type_from_any.rs  get_argument.rs  mod.rs
phenix_core/src/error/operation/: mod.rs
phenix_core/src/evaluate/: arguments.rs
phenix_core/src/names/: identifier.rs  mod.rs  name.rs  namespace.rs
phenix_core/src/operations/: add.rs  and.rs  condition.rs  equals.rs  ext.rs  get_argument.rs  join.rs  lines.rs  mod.rs  or.rs  sub.rs  to_boolean.rs  words.rs
phenix_core/src/operations/boolean/: and.rs  has_argument.rs  mod.rs  or.rs  to_boolean.rs
phenix_core/src/operations/context/: extend.rs  mod.rs  switch.rs
phenix_core/src/operations/path/: join.rs  mod.rs  to_path.rs
phenix_core/src/operations/string/: block.rs  join.rs  lines.rs  mod.rs  words.rs
phenix_core/src/value/: action.rs  any.rs  array.rs  boolean.rs  command.rs  concrete.rs  context.rs  dynamic.rs  expression.rs  ext.rs  mod.rs  number.rs  path.rs  string.rs  text.rs
phenix_core/src/value/action/: change_location.rs  command.rs  location.rs
phenix_core/src/value/concrete/: error.rs
phenix_npm/: Cargo.toml
phenix_std/: Cargo.toml
phenix_svelte/: Cargo.toml
phenix_test/: Cargo.toml
phenix_test/src/: main.rs
phenix_xml/: Cargo.toml
src/: bundle.rs  creation.rs  env.rs  main.rs  namespace.rs  pack.rs  (+2 more)
(+81 files in other folders)
