[package]
name = "phenix_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "0.4.1"
rust_decimal = "1.27.0"
rust_decimal_macros = "1.27.0"
derive_more = "0.99.17"
itertools = "0.10.5"
nom = "7.1.3"
