[package]
name = "phenix_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phenix_core = { path="../phenix_core" }
phenix_std = { path= "../extensions/phenix_std" }
phenix_svelte = { path= "../extensions/phenix_svelte" }

